# imageFormationRaw

./: CMakeLists.txt  ChangeLog  README.md  build.sh  image_formation.sh
scripts/: create_burst.sh  evaluate_performance.sh  fusion_irregularly_sampled_data.sh  preprocessing.sh  preprocessing_raw_images.sh  registration.sh  two_step_registration.sh
src/: add_noise.c  affine0255.c  asymptotic_nc_filter.c  bicubic.c  bicubic.h  bicubic_interpolation.c  channel_equalization.c  combi_ckr.c  combi_ckr_core.c  combi_ckr_core.h  compare_homography.c  compute.c  compute_core.c  compute_core.h  concatenate_images.c  create_burst.c  crop.c  difference_images.c  equalization.c  equalization_core.c  equalization_core.h  fft_core.c  fft_core.h  filter_core.c  filter_core.h  getpixel.c  homography_core.c  homography_core.h  interpolation_core.c  interpolation_core.h  lowpass.c  main_add_noise.c  main_affine0255.c  main_asymptotic_nc_filter.c  main_channel_equalization.c  main_combi_ckr.c  main_compare_homography.c  main_compute.c  main_concatenate_images.c  main_create_burst.c  (+21 more)
src/imscript/: random.h
